--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     class="flex md:justify-between duration-300 justify-center z-40 max-md:backdrop-blur-[100px] max-md:fixed top-0 -right-full items-center py-5 px-[23px] w-full font-inter max-md:min-h-screen max-md:w-full max-md:flex-col max-md:gap-y-10">
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#patoarchitekciPodcast">Gdzie słuchać</a>
+                        <a class="nav-link" href="#patoarchitekciPodcast">Gdzie słuchać</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
@@ -34,15 +34,15 @@
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#uslugi">Szkolenia</a>
+                        <a class="nav-link" href="#uslugi">Szkolenia</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#protopia">Bezpłatna Konsultacja</a>
+                        <a class="nav-link" href="#protopia">Bezpłatna Konsultacja</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#newslettra">Kontakt</a>
+                        <a class="nav-link" href="#newslettra">Kontakt</a>
                     </li>
                 </ul>
                 <div class="pt-[74px] md:hidden">
