add animation on back to top

--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
     </footer>
     <!-- back-to-top -->
     <button id="backToTop"
-        class="hidden fixed bottom-[31px] right-[30px] size-[50px] rounded-full border-[2px] border-orange cursor-pointer z-[9999] flex justify-center items-center">
+        class="hidden fixed bottom-[31px] right-[30px] size-[50px] animate-bounce rounded-full border-[2px] border-orange cursor-pointer z-[9999] flex justify-center items-center">
         <svg width="22" height="14" viewBox="0 0 22 14" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M20.7942 13L10.7942 2L0.794189 13" stroke="#FF4405" stroke-width="2" />
         </svg>
