--- a/helper.html
+++ b/helper.html
@@ -36,7 +36,7 @@
                     </div>
                     <div>
                         <p
-                            class="text-orange text-4xl max-[1024px]:text-3xl max-[992px]:text-[26px] max-[769px]:text-2xl max-[426px]:text-xl font-semibold uppercase leading-[110%] max-w-[810px] font-tomorrow pt-1 max-[992px]:pt-0">
+                            class="text-orange text-4xl max-[1024px]:text-3xl max-[992px]:text-[26px] max-[769px]:text-2xl max-[426px]:text-xl font-semibold uppercase leading-[110%] max-w-[810px] font-tomorrow">
                             Odcinek
                             100:
                             Metryki DORA – mit czy rzeczywistość?</p>
@@ -193,7 +193,7 @@
                             #KingaGaździńska
                         </p>
                         <button
-                            class="group flex items-center gap-[12px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white py-[5px] pl-[7px] pr-[27px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
+                            class="group flex items-center gap-[12px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white py-[5px] pl-[7px] pr-[27px] rounded-[50px] mt-[33px] max-[1100px]:mt-[26px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
                             <div
                                 class="h-[36px] w-[36px] rounded-full flex justify-center items-center bg-orange group-hover:bg-white transition-all duration-300">
                                 <svg width="23" height="20" viewBox="0 0 23 20" fill="none"
