--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header w-full font-inter flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         SZKOLENIA OTWARTE
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -186,14 +186,14 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content max-h-0 overflow-hidden font-inter transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
                 <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header w-full uppercase flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header w-full font-inter uppercase flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         Szkolenia dla firm
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -202,14 +202,14 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content max-h-0 font-inter overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
                 <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header font-inter uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         Konsultacje
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -218,14 +218,14 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content font-inter max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
                 <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header font-inter uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         Doradztwo
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -234,7 +234,7 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content font-inter max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
