solve arrow mistake

--- a/index.html
+++ b/index.html
@@ -425,11 +425,13 @@
                             porządną dawką humoru.
                         </p>
                         <div class="pt-[15px] sm:pt-[35px] gap-3 flex">
-                            <a href="https://in.linkedin.com/" class=" hover:scale-110 hover:shadow-md duration-300 rounded-full" target="_blank">
+                            <a href="https://in.linkedin.com/"
+                                class=" hover:scale-110 hover:shadow-md duration-300 rounded-full" target="_blank">
                                 <img class="pointer-events-none max-sm:max-w-[30px]"
                                     src="./assets/images/svg/linkdin.svg" alt="LinkedIn profile">
                             </a>
-                            <a href="https://x.com/?lang=en" class=" hover:scale-110 hover:shadow-md duration-300 rounded-full" target="_blank">
+                            <a href="https://x.com/?lang=en"
+                                class=" hover:scale-110 hover:shadow-md duration-300 rounded-full" target="_blank">
                                 <img class="pointer-events-none max-sm:max-w-[30px]"
                                     src="./assets/images/svg/twitter.svg" alt="Twitter profile">
                             </a>
@@ -449,11 +451,13 @@
                             ze świetną komunikacją. Praca z nim to jedyne w swoim rodzaju doświadczenie.
                         </p>
                         <div class="pt-[15px] sm:pt-[35px] gap-3 flex">
-                            <a href="https://in.linkedin.com/" class=" hover:scale-110 hover:shadow-md duration-300 rounded-full" target="_blank">
+                            <a href="https://in.linkedin.com/"
+                                class=" hover:scale-110 hover:shadow-md duration-300 rounded-full" target="_blank">
                                 <img class="pointer-events-none max-sm:max-w-[30px]"
                                     src="./assets/images/svg/linkdin.svg" alt="LinkedIn profile">
                             </a>
-                            <a href="https://x.com/?lang=en" class=" hover:scale-110 hover:shadow-md duration-300 rounded-full" target="_blank">
+                            <a href="https://x.com/?lang=en"
+                                class=" hover:scale-110 hover:shadow-md duration-300 rounded-full" target="_blank">
                                 <img class="pointer-events-none max-sm:max-w-[30px]"
                                     src="./assets/images/svg/twitter.svg" alt="Twitter profile">
                             </a>
@@ -593,7 +597,7 @@
     <!-- NEWSLETTERA -->
     <section id="newslettra"
         class="px-[30px] relative min-h-[439px] sm:max-h-[758px] sm:min-h-[758px] max-w-[1920px] mx-auto">
-        <img class="absolute top-[250px] left-18 pointer-events-none xl:left-20 max-lg:hidden"
+        <img class="absolute top-[250px] left-[70px] xl:left-[197px] max-lg:hidden"
             src="./assets/images/svg/newsletter-arrow.svg" alt="arrow-img">
         <div class="max-w-[1220px] mx-auto relative pt-10 md:pt-[103px] z-5">
             <h2
