--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         class="max-w-[1920px] mx-auto bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
         <div class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
             <div
-                class="absolute top-0 w-full max-w-[998px] text-light-black left-1/2 -translate-x-1/2 bg-white h-11 md:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center rounded-b-[15px]">
+                class="absolute top-0 w-full lg:max-w-[998px] text-light-black left-1/2 -translate-x-1/2 bg-white h-11 md:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center lg:rounded-b-[15px]">
                 Do najbliższego szkolenia <span class="text-orange">zostały 3 dni!</span> <span
                     class="text-orange !font-medium">👉 Zapisz się teraz!</span>
             </div>
@@ -48,9 +48,9 @@
                 <div class="pt-[74px] md:hidden">
                     <div onclick="toggleNavbar()"
                         class="z-50 cursor-pointer group relative !min-h-[17px] ml-auto mr-[30px] !w-[25px] flex flex-col justify-center items-center gap-1">
-                        <span id="toggleBar1" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
-                        <span id="toggleBar2" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
-                        <span id="toggleBar3" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
+                        <span id="toggleBar1" class="transition-transform ml-auto h-[3px] bg-white duration-300 w-full"></span>
+                        <span id="toggleBar2" class="transition-transform ml-auto h-[3px] bg-white duration-300 w-full"></span>
+                        <span id="toggleBar3" class="transition-transform ml-auto h-[3px] bg-white duration-300 w-full"></span>
                     </div>
                 </div>
             </nav>
@@ -81,17 +81,17 @@
             <img class="ml-auto md:flex hidden pb-[56px] pointer-events-none"
                 src="./assets/images/svg/rounded-cross.svg" alt="cross-img">
             <div
-                class="uppercase lg:text-[48px] md:text-[35px] sm:text-[28px] text-[20px] font-tomorrow md:min-h-[325px]">
-                <h3 class="font-semibold text-light-black md:leading-[123%] md:-mt-3 leading-[119%] max-md:cap-trim">
+                class="uppercase min-[1155px]:text-[48px] md:text-[35px] sm:text-[28px] text-[20px] font-tomorrow md:min-h-[325px]">
+                <h3 class="font-semibold text-light-black md:leading-[123%] md:-mt-3 leading-[119%]">
                     Patoarchitekci to podcast,</h3>
-                <p class="font-medium text-light-black md:leading-[120%] leading-[119%] md:-md-[22px] max-md:cap-trim">
+                <p class="font-medium text-light-black md:leading-[120%] leading-[119%] md:-md-[22px]">
                     który rozkłada IT na czynniki pierwsze, bez zbędnego żargonu i BS. Prowadzą go Łukasz Kałużny i
                     Szymon Warda
                     – eksperci,
                     którzy z humorem i szczerością biorą na warsztat najtrudniejsze tematy technologiczne.
                 </p>
             </div>
-            <img class="pt-[47px] md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg"
+            <img class="pt-[47px] min-[1440px]:hidden md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg"
                 alt="cross-img">
         </div>
         <img class="absolute md:flex hidden bottom-0 right-0 w-full pointer-events-none"
