--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
     <!-- NEWSLETTERA -->
     <section id="newslettra"
         class="px-[30px] relative min-h-[439px] sm:max-h-[758px] sm:min-h-[758px] max-w-[1920px] mx-auto">
-        <img class="absolute top-[250px] left-[70px] xl:left-[197px] max-lg:hidden"
+        <img class="absolute top-[250px] pointer-events-none left-[70px] xl:left-[197px] max-lg:hidden"
             src="./assets/images/svg/newsletter-arrow.svg" alt="arrow-img">
         <div class="max-w-[1220px] mx-auto relative pt-10 md:pt-[103px] z-5">
             <h2
@@ -621,14 +621,13 @@
                 </div>
             </form>
         </div>
-        <img class="w-full absolute bottom-0 left-0 z-20 pointer-events-none"
+        <img class="w-full absolute -bottom-1 sm:bottom-0 2xl:-bottom-9 left-0 z-20 pointer-events-none"
             src="./assets/images/png/footer-black-cloud.png" alt="cloud-img">
-        <img class="absolute right-0 bottom-0 pointer-events-none max-sm:max-w-[114px] max-sm:max-h-[166px] max-md:max-w-[300px]"
+        <img class="absolute right-0 bottom-1 sm:bottom-0 pointer-events-none max-sm:max-w-[114px] max-sm:max-h-[166px] max-md:max-w-[300px] max-lg:max-w-[270px]"
             src="./assets/images/svg/horse.svg" alt="horse-img">
     </section>
     <!-- footer -->
-    <footer id="footer"
-        class="bg-light-black px-[30px] max-w-[1920px] mx-auto sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
+    <footer id="footer" class="bg-light-black px-[30px] max-w-[1920px] mx-auto relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
             <div
                 class="flex justify-center py-[48.5px] items-center sm:justify-between max-w-[1220px] max-sm:gap-[37px]">
