solve podcast img problem

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </p>
             </div>
         </div>
-        <img class="absolute pointer-events-none max-sm:-translate-x-1/2 left-[50%] bottom-0 max-sm:min-w-[504px] max-sm:max-w-[504px] md:bottom-[-70px] xl:bottom-[-130px] sm:left-0 sm:right-0 w-full max-sm:min-h-[314px] max-sm:max-h-[314px] xl:min-h-[1000px] sm:max-h-[1000px]"
+        <img class="absolute pointer-events-none max-sm:-translate-x-1/2 left-[50%] max-w-[1501px] mx-auto bottom-0 max-sm:min-w-[504px] max-sm:max-w-[504px] md:bottom-[-70px] xl:bottom-[-130px] sm:left-0 sm:right-0 w-full max-sm:min-h-[314px] max-sm:max-h-[314px] xl:min-h-[1000px] sm:max-h-[1000px]"
             src="./assets/images/png/two-man-with-podcast.png" alt="podcast">
         <img class="absolute bottom-0 w-full left-0" src="./assets/images/png/podcast-cloud.png" alt="">
     </section>
