--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 class="font-tomorrow font-semibold whitespace-nowrap text-[24px] sm:text-[32px] md:text-[36px] lg:text-[40px] leading-[32px] text-center">
                 SUBSKRYBUJ PODCAST</h2>
             <div
-                class="flex max-[992px]:flex-wrap max-[768px]:flex-col gap-[28px] min-[768px]:gap-[50px] pt-[33px] min-[768px]:pt-[66px] min-[768px]:pt-[95px] mx-auto">
+                class="flex max-[992px]:flex-wrap max-[768px]:flex-col gap-[28px] min-[768px]:gap-[50px] pt-[33px] min-[768px]:pt-[95px] mx-auto">
                 <a href="https://www.youtube.com/" target="_blank"
                     class="w-[350px] h-[100px] max-[768px]:h-[56.04px] max-[768px]:w-[196.13px] items-center justify-center mx-auto border border-[#201B20] rounded-[16.81px] md:rounded-[30px] flex hover:shadow-2xl hover:scale-[1.1] transition-all duration-300 ease-in-out">
                     <img class="max-[768px]:w-[98.94px] max-[768px]:h-[22.42px]"
