back to top updated

--- a/index.html
+++ b/index.html
@@ -785,10 +785,10 @@
     </footer>
     <!-- back-to-top -->
     <button id="backToTop"
-        class="fixed bottom-[20px] right-[20px] sm:bottom-[31px] sm:right-[30px] md:size-[50px] sm:size-10 size-[25px] rounded-full border-[2px] border-[#FF5500] cursor-pointer z-[9999] flex justify-center items-center">
+        class="fixed bottom-[20px] right-[20px] sm:bottom-[31px] sm:right-[30px] md:size-[50px] sm:size-10 size-[25px] rounded-full border-[2px] border-white bg-orange cursor-pointer z-[9999] flex justify-center items-center">
         <svg class="md:size-[22px] sm:size-4 size-2.5" width="22" height="14" viewBox="0 0 22 14" fill="none"
             xmlns="http://www.w3.org/2000/svg">
-            <path d="M20.7942 13L10.7942 2L0.794189 13" stroke="#FF5500" stroke-width="2" />
+            <path d="M20.7942 13L10.7942 2L0.794189 13" stroke="#ffffff" stroke-width="2" />
         </svg>
     </button>
     <script src="./assets/js/app.js"></script>
