--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 </div>
                 <div>
                     <img src="./assets/images/svg/circle.svg" alt="decorative circle"
-                        class="absolute lg:top-[64px] lg:right-[-10.5%] xl:size-[303px] pointer-events-none lg:size-[230px] md:size-[100px] size-[30px] top-0">
+                        class="absolute lg:top-[64px] lg:right-[-10.5%] 2xl:!right-[-8%] xl:size-[303px] pointer-events-none lg:size-[230px] md:size-[100px] size-[30px] top-0">
                     <img src="./assets/images/png/two-people.png" alt="Two people"
                         class="xl:max-w-[1000px] lg:max-w-[700px] md:max-w-[600px] pointer-events-none lg:absolute xl:top-[8%] top-[28%] right-[0%] object-cover rounded-lg z-0">
                 </div>
