--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
                 </ul>
                 <div class="pt-[74px] md:hidden">
-                    <div onclick="toggleNavbar()"
+                    <div
                         class="z-50 cursor-pointer group relative !min-h-[17px] ml-auto mr-[30px] !w-[25px] flex flex-col justify-center items-center gap-1">
                         <span id="toggleBar1"
                             class="transition-transform ml-auto h-[3px] bg-white duration-300 w-full"></span>
